--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,9 @@
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "express": "^4.18.2",
+    "knex": "^3.1.0",
     "node-cron": "^3.0.2",
+    "pg": "^8.11.3",
     "unzipper": "^0.10.14"
   }
 }
